# OTMM_glycan

./: OTMM_新規性_local_decimal.ipynb  OTMM_既存_local_decimal.ipynb  README.md  algorism.py  algorism_decimal.py  memo.txt  otmm.py  otmm_decimal_existing.py  otmm_decimal_novelty.py  otmm_existing.py  otmm_novelty.py  parsing.py  preprocessor.py  preprocessor_existing.py  preprocessor_novelty.py  pyproject.toml  tips.txt
Glycan.git/: config  packed-refs
PowerPoint/: parse_glycan_template.pptx  parsing_state15_template.pptx  upward.pptx
others/: algorism.py  algorism_int.py  algorism_round.py  otmm.py  otmm_existing.py  otmm_int.py  otmm_novelty.py  otmm_round.py  parsing_decimal.py
otmm_decimal/: algorism_decimal.py  otmm_decimal_existing.py  otmm_decimal_novelty.py  parsing.py  parsing_exp.py  preprocessor_novelty.py  time_compare_macpro.xlsx  time_compare_state.xlsx
otmm_float/: compare_time.xlsx  otmm_novelty.py
result_existing_100_50.0_10_25_ColabFree/: a_a_100_50.0_10_10.csv  b_100_50.0_10_25.csv  likelihood_100_50.0_10_25.csv
result_existing_100_50.0_5_25_ColabFree/: a_a_100_50.0_5_5.csv
result_novelty/: a_a_100_200_10_10.csv  a_a_100_50_5_5.csv  a_b_100_200_10_10.csv  a_b_100_50_5_5.csv  b_100_200_10_51.csv  b_100_50_5_51.csv  memo.txt  pi_100_200_10.csv  pi_100_50_5.csv  time_100_200_10_51.txt  time_100_50_5_51.txt
result_novelty_100_50.0_10_51_ColabFree/: a_a_100_50.0_10_10.csv  a_b_100_50.0_10_10.csv  b_100_50.0_10_51.csv  likelihood_100_50.0_10_51.csv  pi_100_50.0_10.csv  time_100_50.0_10_51.txt
result_novelty_10_50_5_23/: a_a_10_50_5_5.csv  (+4 more)
(+468 files in other folders)
