[tool.poetry]
name = "OTMM"
version = "0.1.0"
description = ""
authors = ["kento-T-JP <kento0901910@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
